<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">VE Template</string>
    <string name="title_main">VE Solutions</string>
    <string name="standard_template">Standard Video Template</string>
    <string name="standard_template_desc">"Standard video template is a solution that allow our customers to design video templates in After Effects, and export those templates as VE templates to modify, render or preview on Android, iOS or GPU server platforms.\nBy letting users to customize video templates, standard video template can create creative and attractive videos."</string>
    <string name="template_list_config_file">info.json</string>
    <string name="render">Render</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="template_1">Template 1</string>
    <string name="template_2">Template 2</string>
    <string name="change_music">Switch Music</string>
    <string name="btn_import">Import</string>
    <string name="btn_export">Export</string>
    <string name="camera_template">Camera Template</string>
    <string name="camera_template_desc">"You can add camera template designed with After Effects such as advanced virtual scenes and dynamic effects etc to camera. Moreover, you can preview and interact with your works, or record video in real time."</string>
    <string name="sticker_template">Sticker Template</string>
    <string name="sticker_template_desc">"The sticker template, designed with After Effects and exported by VE Exporter, can be added to standard, dynamic and camera template. You can modify the sticker template in real time after you add it to your works."</string>
    <string name="dermabrasion">skin touch</string>
    <string name="whiten">whiten</string>
    <string name="redden">redden</string>
    <string name="pinking">pink</string>
    <string name="sticker1_name">general sticker</string>
    <string name="sticker2_name">editable text sticker</string>
    <string name="sticker3_name">editable image sticker</string>
    <string name="power_text_desc">字符动画，应用了 AE 中常用的位置，锚点，旋转，颜色，透明度等动画效果，并支持横排，竖排，对齐等所有文字排版方式。使用字符动画可以实现丰富多彩的文字特效。</string>
    <string name="resolution">Resolution: </string>
    <string name="tip_switch_filter">Slide to Switch Filter</string>
    <string name="footer_copyright">Hangzhou Shixing Technology Co., Ltd. All Rights Reserved.</string>
    <string name="rendering">Rendering…</string>
    <string name="close">Close</string>
    <string name="batch_import">Batch Import</string>
    <string name="done">Done</string>
    <string name="template_return">Return</string>
    <string name="content">Content</string>
    <string name="fonts">Fonts</string>
    <string name="text_style">Style</string>
    <string name="ok">OK</string>
    <string name="text_color">Text Color</string>
    <string name="stroke_color">Stroke Color</string>
    <string name="stroke_width">Stroke Width</string>
    <string name="save_to_album">Save to album</string>
    <string name="next">Next</string>
    <string name="template_list">Template List</string>
    <string name="template_editor_video">Video</string>
    <string name="alivc_editor_template_editor_text">Text</string>
    <string name="alivc_editor_template_editor_music">Music</string>
    <string name="tempalte_create">Modify</string>
    <string name="tempalte_assets_statement">replace media {0} replace text {1}</string>
    <string name="total_duration">duration {0}</string>
    <string name="replace">Replace</string>
    <string name="cutting">Cut</string>
    <string name="delete">Delete</string>
    <string name="mute_music">mute</string>
    <string name="origin_music">origin music</string>
    <string name="other_music">other music</string>
    <string name="ugsv_template_exporting">Exporting…</string>
    <string name="ugsv_template_export_tips">Please keep the screen on</string>
    <string name="crop">Crop</string>
    <string name="save_success">Save Success</string>
    <string name="tp_start_download">Start downloading</string>
    <string name="tp_download_finish">Finish download</string>
</resources>
