<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TemplateEditActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="44dp" />

    <TextView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:drawableStart="@drawable/return_icon"
        android:drawableLeft="@drawable/return_icon"
        android:gravity="center"
        android:onClick="close"
        android:text="@string/close"
        android:textColor="@color/white" />

    <ImageButton
        android:id="@+id/btn_done"
        android:layout_width="40dp"
        android:layout_height="24dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/bg_edit_done"
        android:gravity="center"
        android:onClick="done"
        android:src="@drawable/wancheng_icon"
        app:layout_constraintBottom_toTopOf="@id/tv_done"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/done"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@id/guide_line"
        app:layout_constraintEnd_toEndOf="@id/btn_done"
        app:layout_constraintStart_toStartOf="@id/btn_done" />

    <TextView
        android:onClick="batchImport"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:background="@drawable/bg_import_btn"
        android:drawableStart="@drawable/pldr_icon"
        android:drawableLeft="@drawable/pldr_icon"
        android:drawablePadding="4dp"
        android:gravity="center"
        android:paddingLeft="9dp"
        android:paddingRight="9dp"
        android:text="@string/batch_import"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guide_line" />

    <FrameLayout
        android:id="@+id/bottom_container"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginBottom="15dp"
        android:descendantFocusability="blocksDescendants"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_thumb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingStart="15dp"
            android:paddingEnd="15dp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/edit_view_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="25dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guide_line" />

    <com.shixing.sxve.ui.view.TextAssetEditLayout
        android:id="@+id/text_edit_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>