<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <com.aliyun.svideo.template.sample.view.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <FrameLayout
        android:id="@+id/surface_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@id/seek_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.shixing.sxvideoengine.SXPlayerSurfaceView
            android:id="@+id/player_surface_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center" />

    </FrameLayout>

    <ImageButton
        android:id="@+id/btn_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:background="?selectableItemBackground"
        android:onClick="playOrPause"
        android:src="@drawable/btn_play_src"
        app:layout_constraintBottom_toBottomOf="@id/seek_bar"
        app:layout_constraintEnd_toStartOf="@id/seek_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/seek_bar" />

    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintBottom_toTopOf="@id/btn_tpl1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_play"
        app:layout_constraintTop_toBottomOf="@id/surface_container" />

    <Button
        android:id="@+id/btn_tpl1"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/sel_bg_ve_btn"
        android:onClick="template1"
        android:text="@string/template_1"
        android:textColor="@color/ve_btn_text"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/tv_ratio"
        app:layout_constraintStart_toStartOf="@id/btn_play"
        app:layout_constraintTop_toBottomOf="@id/seek_bar" />

    <Button
        android:id="@+id/btn_tpl2"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginStart="9dp"
        android:background="@drawable/sel_bg_ve_btn"
        android:onClick="template2"
        android:text="@string/template_2"
        android:textColor="@color/ve_btn_text"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_tpl1"
        app:layout_constraintStart_toEndOf="@id/btn_tpl1"
        app:layout_constraintTop_toTopOf="@id/btn_tpl1" />

    <Button
        android:id="@+id/btn_audio"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginStart="9dp"
        android:background="@drawable/sel_bg_ve_btn"
        android:onClick="replaceAudio"
        android:text="@string/change_music"
        android:textColor="@color/ve_btn_text"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_tpl2"
        app:layout_constraintStart_toEndOf="@id/btn_tpl2"
        app:layout_constraintTop_toTopOf="@id/btn_tpl2" />

    <TextView
        android:id="@+id/tv_ratio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/resolution"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/btn_ratio_100"
        app:layout_constraintStart_toStartOf="@id/btn_play"
        app:layout_constraintTop_toBottomOf="@id/btn_tpl1" />

    <Button
        android:id="@+id/btn_ratio_100"
        android:layout_width="54dp"
        android:layout_height="28dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/sel_bg_ve_btn"
        android:onClick="changeRatio"
        android:text="100%"
        android:textColor="@color/ve_btn_text"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_ratio"
        app:layout_constraintTop_toBottomOf="@id/tv_ratio" />

    <Button
        android:id="@+id/btn_ratio_80"
        android:layout_width="54dp"
        android:layout_height="28dp"
        android:layout_marginStart="9dp"
        android:background="@drawable/sel_bg_ve_btn"
        android:onClick="changeRatio"
        android:text="80%"
        android:textColor="@color/ve_btn_text"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_ratio_100"
        app:layout_constraintStart_toEndOf="@id/btn_ratio_100"
        app:layout_constraintTop_toTopOf="@id/btn_ratio_100" />

    <Button
        android:id="@+id/btn_ratio_50"
        android:layout_width="54dp"
        android:layout_height="28dp"
        android:layout_marginStart="9dp"
        android:background="@drawable/sel_bg_ve_btn"
        android:onClick="changeRatio"
        android:text="50%"
        android:textColor="@color/ve_btn_text"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_ratio_80"
        app:layout_constraintStart_toEndOf="@id/btn_ratio_80"
        app:layout_constraintTop_toTopOf="@id/btn_ratio_80" />

    <Button
        android:id="@+id/btn_ratio_30"
        android:layout_width="54dp"
        android:layout_height="28dp"
        android:layout_marginStart="9dp"
        android:background="@drawable/sel_bg_ve_btn"
        android:onClick="changeRatio"
        android:text="30%"
        android:textColor="@color/ve_btn_text"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_ratio_50"
        app:layout_constraintStart_toEndOf="@id/btn_ratio_50"
        app:layout_constraintTop_toTopOf="@id/btn_ratio_50" />

</androidx.constraintlayout.widget.ConstraintLayout>