<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.shixing.sxvideoengine.SXPlayerSurfaceView
            android:id="@+id/player_surface_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center" />

        <com.aliyun.svideo.template.sample.view.StickerOverlay
            android:id="@+id/overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="?selectableItemBackground"
        android:src="@drawable/return_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageButton
        android:id="@+id/btn_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:background="?selectableItemBackground"
        android:src="@drawable/icon_xiangji"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_back" />

    <ImageButton
        android:id="@+id/btn_torch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:background="?selectableItemBackground"
        android:src="@drawable/icon_shanguangdeng"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        app:layout_constraintEnd_toStartOf="@id/btn_camera"
        app:layout_constraintTop_toTopOf="@id/btn_back" />

    <ImageView
        android:id="@+id/thumb_sticker1"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="105dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/thumb_sticker2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        tools:src="@drawable/camera_template1" />


    <ImageView
        android:id="@+id/thumb_sticker2"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="45dp"
        android:layout_marginBottom="105dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/thumb_sticker3"
        app:layout_constraintStart_toEndOf="@id/thumb_sticker1"
        tools:src="@drawable/camera_template1" />


    <ImageView
        android:id="@+id/thumb_sticker3"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="45dp"
        android:layout_marginBottom="105dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/thumb_sticker2"
        tools:src="@drawable/camera_template1" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/sticker1_name"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/thumb_sticker1"
        app:layout_constraintStart_toStartOf="@id/thumb_sticker1"
        app:layout_constraintTop_toBottomOf="@id/thumb_sticker1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/sticker2_name"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/thumb_sticker2"
        app:layout_constraintStart_toStartOf="@id/thumb_sticker2"
        app:layout_constraintTop_toBottomOf="@id/thumb_sticker2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/sticker3_name"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/thumb_sticker3"
        app:layout_constraintStart_toStartOf="@id/thumb_sticker3"
        app:layout_constraintTop_toBottomOf="@id/thumb_sticker3" />


    <com.aliyun.svideo.template.sample.view.RecordButton
        android:id="@+id/record"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="17dp"
        android:onClick="onClick"
        app:borderWidth="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <com.shixing.sxve.ui.view.TextAssetEditLayout
        android:id="@+id/text_edit_layout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</androidx.constraintlayout.widget.ConstraintLayout>